adds citation information

--- a/genome_sampler/citations.bib
+++ b/genome_sampler/citations.bib
@@ -8,3 +8,16 @@
   publisher={PeerJ Inc.},
   doi={10.7717/peerj.2584}
 }
+
+
+@article{genomesampler,
+  title={Reproducibly sampling {SARS-CoV-2} genomes across time, geography, and viral diversity},
+  author= {Bolyen, Evan and Dillon, Matthew R and Bokulich, Nicholas A and Ladner, Jason T and Larsen, Brendan B and Hepp, Crystal M and Lemmer, Darrin and Sahl, Jason W and Sanchez, Andrew and Holdgraf, Chris and Sewell, Chris and Choudhury, Aakash G and Stachurski, John and McKay, Matthew and Engelthaler, David M and Worobey, Michael and Keim, Paul and Gregory Caporaso, J},
+  journal={F1000 Research},
+  publisher={F1000 Research Limited},
+  volume={9},
+  number={657},
+  pages={657},
+  year={2020},
+  doi={10.12688/f1000research.24751.1}
+}
