--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,3 +1,25 @@
+@article{genome-sampler-f1000,
+ author = {Bolyen, Evan and Dillon, Matthew R and Bokulich, Nicholas A and Ladner, Jason T and Larsen, Brendan B and Hepp, Crystal M and Lemmer, Darrin and Sahl, Jason W and Sanchez, Andrew and Holdgraf, Chris and Sewell, Chris and Choudhury, Aakash G and Stachurski, John and McKay, Matthew and Engelthaler, David M and Worobey, Michael and Keim, Paul and Gregory Caporaso, J},
+ doi = {10.12688/f1000research.24751.1},
+ journal = {F1000 Research},
+ number = {657},
+ pages = {657},
+ publisher = {F1000 Research Limited},
+ title = {Reproducibly sampling SARS-CoV-2 genomes across time, geography, and viral diversity},
+ volume = {9},
+ year = {2020}
+}
+
+@article{vsearch,
+ author = {Rognes, Torbjørn and Flouri, Tomáš and Nichols, Ben and Quince, Christopher and Mahé, Frédéric},
+ doi = {10.7717/peerj.2584},
+ journal = {PeerJ},
+ pages = {e2584},
+ publisher = {PeerJ Inc.},
+ title = {VSEARCH: a versatile open source tool for metagenomics},
+ volume = {4},
+ year = {2016}
+}
 
 @ARTICLE{iqtree2,
   title    = "{IQ-TREE} 2: New Models and Efficient Methods for Phylogenetic
@@ -25,7 +47,6 @@
   language = "en"
 }
 
-
 @ARTICLE{mafft7,
   title    = "{MAFFT} multiple sequence alignment software version 7:
               improvements in performance and usability",
@@ -48,50 +69,6 @@
   year     =  2013,
   language = "en"
 }
-
-
-@ARTICLE{genome-sampler-f1000,
-  title     = "Reproducibly sampling {SARS-CoV-2} genomes across time,
-               geography, and viral diversity",
-  author    = "Bolyen, Evan and Dillon, Matthew R and Bokulich, Nicholas A and
-               Ladner, Jason T and Larsen, Brendan B and Hepp, Crystal M and
-               Lemmer, Darrin and Sahl, Jason W and Sanchez, Andrew and
-               Holdgraf, Chris and Sewell, Chris and Choudhury, Aakash G and
-               Stachurski, John and McKay, Matthew and Engelthaler, David M and
-               Worobey, Michael and Keim, Paul and Gregory Caporaso, J",
-  abstract  = "The COVID-19 pandemic has led to a rapid accumulation of
-               SARS-CoV-2 genomes, enabling genomic epidemiology on local and
-               global scales. Collections of genomes from resources such as
-               GISAID must be subsampled to enable computationally feasible
-               phylogenetic and other analyses. We present genome-sampler, a
-               software package that supports sampling collections of viral
-               genomes across multiple axes including time of genome isolation,
-               location of genome isolation, and viral diversity. The software
-               is modular in design so that these or future sampling approaches
-               can be applied independently and combined (or replaced with a
-               random sampling approach) to facilitate custom workflows and
-               benchmarking. genome-sampler is written as a QIIME 2 plugin,
-               ensuring that its application is fully reproducible through
-               QIIME 2's unique retrospective data provenance tracking system.
-               genome-sampler can be installed in a conda environment on macOS
-               or Linux systems. A complete default pipeline is available
-               through a Snakemake workflow, so subsampling can be achieved
-               using a single command. genome-sampler is open source, free for
-               all to use, and available at
-               https://caporasolab.us/genome-sampler . We hope that this will
-               facilitate SARS-CoV-2 research and support evaluation of viral
-               genome sampling approaches for genomic epidemiology.",
-  journal   = "F1000Res.",
-  publisher = "F1000 Research Limited",
-  volume    =  9,
-  number    =  657,
-  pages     = "657",
-  month     =  jun,
-  year      =  2020,
-  keywords  = "SARS-CoV-2, genome-sampler, QIIME 2, bioinformatics, genomics",
-  language  = "en"
-}
-
 
 @ARTICLE{qiime2-nbt,
   title    = "Reproducible, interactive, scalable and extensible microbiome
@@ -141,7 +118,6 @@
   language = "en"
 }
 
-
 @ARTICLE{snakemake-bioi,
   title    = "Snakemake--a scalable bioinformatics workflow engine",
   author   = "K{\"o}ster, Johannes and Rahmann, Sven",
@@ -159,62 +135,5 @@
   pages    = "2520--2522",
   month    =  oct,
   year     =  2012,
-  language = "en"
-}
-
-
-@ARTICLE{vsearch-peerj,
-  title    = "{VSEARCH}: a versatile open source tool for metagenomics",
-  author   = "Rognes, Torbj{\o}rn and Flouri, Tom{\'a}{\v s} and Nichols, Ben
-              and Quince, Christopher and Mah{\'e}, Fr{\'e}d{\'e}ric",
-  abstract = "BACKGROUND: VSEARCH is an open source and free of charge
-              multithreaded 64-bit tool for processing and preparing
-              metagenomics, genomics and population genomics nucleotide
-              sequence data. It is designed as an alternative to the widely
-              used USEARCH tool (Edgar, 2010) for which the source code is not
-              publicly available, algorithm details are only rudimentarily
-              described, and only a memory-confined 32-bit version is freely
-              available for academic use. METHODS: When searching nucleotide
-              sequences, VSEARCH uses a fast heuristic based on words shared by
-              the query and target sequences in order to quickly identify
-              similar sequences, a similar strategy is probably used in
-              USEARCH. VSEARCH then performs optimal global sequence alignment
-              of the query against potential target sequences, using full
-              dynamic programming instead of the seed-and-extend heuristic used
-              by USEARCH. Pairwise alignments are computed in parallel using
-              vectorisation and multiple threads. RESULTS: VSEARCH includes
-              most commands for analysing nucleotide sequences available in
-              USEARCH version 7 and several of those available in USEARCH
-              version 8, including searching (exact or based on global
-              alignment), clustering by similarity (using length pre-sorting,
-              abundance pre-sorting or a user-defined order), chimera detection
-              (reference-based or de novo), dereplication (full length or
-              prefix), pairwise alignment, reverse complementation, sorting,
-              and subsampling. VSEARCH also includes commands for FASTQ file
-              processing, i.e., format detection, filtering, read quality
-              statistics, and merging of paired reads. Furthermore, VSEARCH
-              extends functionality with several new commands and improvements,
-              including shuffling, rereplication, masking of low-complexity
-              sequences with the well-known DUST algorithm, a choice among
-              different similarity definitions, and FASTQ file format
-              conversion. VSEARCH is here shown to be more accurate than
-              USEARCH when performing searching, clustering, chimera detection
-              and subsampling, while on a par with USEARCH for paired-ends read
-              merging. VSEARCH is slower than USEARCH when performing
-              clustering and chimera detection, but significantly faster when
-              performing paired-end reads merging and dereplication. VSEARCH is
-              available at https://github.com/torognes/vsearch under either the
-              BSD 2-clause license or the GNU General Public License version
-              3.0. DISCUSSION: VSEARCH has been shown to be a fast, accurate
-              and full-fledged alternative to USEARCH. A free and open-source
-              versatile tool for sequence analysis is now available to the
-              metagenomics community.",
-  journal  = "PeerJ",
-  volume   =  4,
-  pages    = "e2584",
-  month    =  oct,
-  year     =  2016,
-  keywords = "Alignment; Chimera detection; Clustering; Dereplication; Masking;
-              Metagenomics; Parallellization; Searching; Sequences; Shuffling",
   language = "en"
 }
